# nucommander-gtk

./: CMakeLists.txt  Makefile.am  NuCommander.kdev4  README  README.md  configure.ac  launcher.sh  nucommander.bundle  nucommander.bundle.in  nucommander.desktop  nucommander.desktop.in  nucommander.gschema.xml.in
assets/css/: style.scss
bundle/: info.plist  launcher.sh  nucommander.bundle.in
commands/: open-terminal.lua  view.lua
custom-commands/: view.lua
po/: Makevars  POTFILES.in  bg.po  nucommander.pot
src/: CMakeLists.txt  Makefile.am  app_window.cpp  app_window.h  archive_lister.cpp  archive_lister.h  archive_plugin.cpp  archive_plugin.h  archive_plugin_loader.cpp  archive_plugin_loader.h  archive_plugin_types.h  archive_tree.cpp  archive_tree.h  async_queue.h  async_task.cpp  async_task.h  cancel_state.cpp  cancel_state.h  cleanup_n.h  dir_entry.cpp  dir_entry.h  dir_lister.cpp  dir_lister.h  dir_monitor.cpp  dir_monitor.h  dir_tree.cpp  dir_tree.h  dir_type.cpp  dir_type.h  error.cpp  error.h  error_dialog.glade  file_list_controller.cpp  file_list_controller.h  file_model_columns.cpp  file_model_columns.h  file_view.cpp  file_view.h  fileview.glade  fn_operation.h  (+23 more)
src/commands/: CMakeLists.txt  builtin.cpp  builtin.h  commands.cpp  commands.h  custom_commands.cpp  custom_commands.h  lua_api.cpp  lua_api.h  lua_command.cpp  lua_command.h
src/copy/: CMakeLists.txt  copy.cpp  copy.h  move.cpp
src/directory/: CMakeLists.txt  archive_tree.cpp  archive_tree.h  dir_entry.cpp  dir_entry.h  dir_monitor.cpp  dir_monitor.h  dir_tree.cpp  dir_tree.h  dir_type.cpp  dir_type.h  icon_loader.h  vfs.cpp  vfs.h
src/errors/: CMakeLists.txt  attribute_error.cpp  attribute_error.h  create_error.cpp  create_error.h  error.cpp  error.h  error_dialog.cpp  error_dialog.h  errors.h  file_error.cpp  file_error.h  restarts.cpp  restarts.h
src/file_list/: CMakeLists.txt  columns.cpp  columns.h  directory_buffers.cpp  directory_buffers.h  file_list_controller.cpp  file_list_controller.h  file_model_columns.cpp  file_model_columns.h  filtered_list_controller.cpp  filtered_list_controller.h  list_controller.h  sort_func.cpp  sort_func.h
src/interface/: CMakeLists.txt  app_window.cpp  app_window.h  dest_dialog.cpp  dest_dialog.h  error_dialog.glade  file_view.cpp  file_view.h  key_prefs_window.cpp  key_prefs_window.h  open_dirs_popup.cpp  open_dirs_popup.h  prefs_window.cpp  prefs_window.h  progress_dialog.cpp  progress_dialog.h  window.glade
src/lister/: CMakeLists.txt  archive_lister.cpp  archive_lister.h  archive_tree_lister.cpp  archive_tree_lister.h  dir_lister.cpp  dir_lister.h  dir_tree_lister.cpp  dir_tree_lister.h  lister.h  sub_archive_lister.cpp  sub_archive_lister.h  tree_lister.cpp  tree_lister.h
src/operations/: CMakeLists.txt  copy.cpp  copy.h  delete.cpp  delete.h  dir_size.cpp  dir_size.h  move.cpp  move.h
src/paths/: CMakeLists.txt  components.cpp  components.h  pathname.cpp  pathname.h  utils.cpp  utils.h
src/plugins/: CMakeLists.txt  archive_plugin.cpp  archive_plugin.h  archive_plugin_api.h  archive_plugin_loader.cpp  archive_plugin_loader.h  archive_plugin_types.h
src/plugins/archgeneric/: CMakeLists.txt  Makefile.am  plugin.c
src/resources/: dest_dialog.glade  dest_dialog.ui  error_dialog.ui  fileview.glade  fileview.ui  key_prefs_window.glade  main_menu.ui  nucommander.gresource.xml  open_dirs_popup.glade  open_dirs_popup.ui  prefs_window.glade  prefs_window.ui  progress_dialog.glade  progress_dialog.ui  styles.css  window.ui
src/search/: fuzzy_filter.h
src/settings/: CMakeLists.txt  app_settings.cpp  app_settings.h  variant.h
src/stream/: CMakeLists.txt  archive_dir_writer.cpp  archive_dir_writer.h  archive_instream.cpp  archive_instream.h  archive_outstream.cpp  archive_outstream.h  dir_writer.h  error_macros.h  file_instream.cpp  file_instream.h  file_outstream.cpp  file_outstream.h  fsutil.cpp  fsutil.h  instream.cpp  instream.h  outstream.cpp  outstream.h  reg_dir_writer.cpp  reg_dir_writer.h  sub_archive_dir_writer.cpp  sub_archive_dir_writer.h
src/tasks/: CMakeLists.txt  async_queue.h  async_task.cpp  async_task.h  cancel_state.cpp  cancel_state.h  progress.h  task_queue.cpp  task_queue.h
src/util/: CMakeLists.txt  util.h
test/: CMakeLists.txt  Makefile.am  dir_tree_test.cpp  path_utils_test.cpp  pathname_test.cpp
